<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal"
    android:background="#607D8B">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPrincipalTitle"
        android:id="@+id/lblPrincipalTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="#ECEFF1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPrincipalSubTitle"
        android:id="@+id/lblPrincipalSubtitle"
        android:layout_below="@+id/lblPrincipalTitle"
        android:layout_centerHorizontal="true"
        android:textColor="#ECEFF1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lytPrincipalVertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/Platform.AppCompat.Light">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSpotifyStreamer"
            android:id="@+id/btnSpotifyStreamer"
            android:layout_below="@+id/lblPrincipalSubtitle"
            android:layout_alignLeft="@+id/lblPrincipalSubtitle"
            android:layout_alignStart="@+id/lblPrincipalSubtitle"
            android:layout_marginTop="53dp"
            android:layout_toStartOf="@+id/btnBuildItBigger"
            android:layout_toLeftOf="@+id/btnBuildItBigger"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:background="#90A4AE"
            android:singleLine="false"
            android:drawableLeft="@drawable/spotify"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnScoresApp"
            android:id="@+id/btnScoresApp"
            android:layout_alignTop="@+id/btnSpotifyStreamer"
            android:layout_alignRight="@+id/lblPrincipalSubtitle"
            android:layout_alignEnd="@+id/lblPrincipalSubtitle"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:background="#90A4AE"
            android:drawableLeft="@drawable/scores"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLibraryApp"
            android:id="@+id/btnLibraryApp"
            android:layout_below="@+id/btnSpotifyStreamer"
            android:layout_alignLeft="@+id/btnSpotifyStreamer"
            android:layout_alignStart="@+id/btnSpotifyStreamer"
            android:layout_marginTop="33dp"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:background="#CFD8DC"
            android:drawableLeft="@drawable/library"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBuiltItBigger"
            android:id="@+id/btnBuiltItBigger"
            android:layout_alignTop="@+id/btnLibraryApp"
            android:layout_alignRight="@+id/lblPrincipalTitle"
            android:layout_alignEnd="@+id/lblPrincipalTitle"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:background="#CFD8DC"
            android:drawableLeft="@drawable/bigger"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnXYZReader"
            android:id="@+id/btnXYZReader"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/btnLibraryApp"
            android:layout_toLeftOf="@+id/btnScoresApp"
            android:layout_toStartOf="@+id/btnScoresApp"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:background="#B0BEC5"
            android:drawableLeft="@drawable/xyz"
            android:textStyle="bold" />

        <Button
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCapstone"
            android:id="@+id/btnCapstone"
            android:layout_below="@+id/btnXYZReader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:layout_gravity="center_horizontal"
            android:theme="@android:style/Theme.Holo.Light"
            android:background="#263238"
            android:drawableLeft="@drawable/yaga"
            android:textStyle="bold"
            android:textColor="#ffffffff" />
    </LinearLayout>
</RelativeLayout>
